@@ -42,4 +42,7 @@ acl_from_ldap(isc_mem_t *mctx, const char *aclstr, acl_type_t type,
  * Please refer to BIND 9 ARM (Administrator Reference Manual) about ACLs.
  */
 
+isc_result_t
+acl_parse_forwarder(const char *forwarders_str, isc_mem_t *mctx, isc_sockaddr_t **sa);
+
 #endif /* !_LD_ACL_H_ */
