@@ -1,3 +1,6 @@
+[1] Add support for IPv6 elements in idnsForwarders attribute
+    and make syntax compatible with BIND9 forwarders.
+
 1.1.0a2
 ======
 
